p before h3 no idea why I did it xD

--- a/flexboxarticles/flexboxarticles.html
+++ b/flexboxarticles/flexboxarticles.html
@@ -28,7 +28,7 @@
               </div>
             </div>
             <div class="content">
-            <p> <h3>Article1 </h3></p>
+            <h3>Article1 </h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
                 cumque ipsam quasi nostrum maiores ipsa molestiae ut. Vero
@@ -49,7 +49,7 @@
                 </div>
               </div>
               <div class="content">
-                <p> <h3>Article2 </h3></p>
+                 <h3>Article2 </h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
                   cumque ipsam quasi nostrum maiores ipsa molestiae ut. Vero
@@ -70,7 +70,7 @@
                 </div>
               </div>
               <div class="content">
-                <p> <h3>Article3 </h3></p>
+                 <h3>Article3 </h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
                   cumque ipsam quasi nostrum maiores ipsa molestiae ut. Vero
@@ -89,7 +89,7 @@
                 </div>
               </div>
               <div class="content">
-                <p> <h3>Article4 </h3></p>
+                 <h3>Article4 </h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea
                   cumque ipsam quasi nostrum maiores ipsa molestiae ut. Vero
@@ -116,7 +116,7 @@
                 </div>
               </div>
               <div class="content">
-                <p> <h3>Hello this is articel 5 </h3></p>
+                 <h3>Hello this is articel 5 </h3>
                 <p>
                   cumque ipsam quasi nostrum maiores ipsa molestiae ut. Vero
                   tempore dignissimos voluptate. Cum deleniti consequuntur
@@ -130,6 +130,7 @@
                   molestiae et tenetur debitis ad veritatis velit incidunt
                   mollitia voluptatum, odit libero numquam rerum corporis
                   laudantium.
+
                 </p>
               </div> 
         </article>
