--- a/articlewebpage/index.html
+++ b/articlewebpage/index.html
@@ -12,14 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@400;600;700&display=swap"
       rel="stylesheet"
@@ -29,12 +25,12 @@
     <header class="top-header">
       <div class="first-row-header">
         <div class="social-media">
-          <div class="facebook"><img src="./icons/facebook.svg" alt="" /></div>
-          <div class="twitter"><img src="./icons/twitter.svg" alt="" /></div>
+          <div class="facebook"><img class="facebook-icon" src="./icons/facebook.svg" alt="" /></div>
+          <div class="twitter"><img class="twitter-icon" src="./icons/twitter.svg" alt="" /></div>
           <div class="instagram">
-            <img src="./icons/instagram.svg" alt="" />
+            <img class="instagram-icon" src="./icons/instagram.svg" alt="" />
           </div>
-          <div class="rss"><img src="./icons/rss.svg" alt="" /></div>
+          <div class="rss"><img class="rss-icon" src="./icons/rss.svg" alt="" /></div>
         </div>
         <div class="logo">
           <p class="rest-of-logo"><span class="firstletter">M</span>aktub</p>
