starting the portfolio mini project

--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -1,21 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>landing Page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header class="header">
-        <nav class="main-menu">
-            <ul class="">
-                <li><a href="#">Portoflio</a></li>
-                <li><a href="#"></a>About</li>
-                <li><a href="#"></a>Contact</li>
-            </ul>
-        </nav>
+      <nav class="main-menu">
+        <ul class="">
+          <li><a href="#">Portoflio</a></li>
+          <li><a href="#"></a>About</li>
+          <li><a href="#"></a>Contact</li>
+        </ul>
+      </nav>
     </header>
-</body>
+    <div class="introduction">
+      <div class="welcome">Hey there. I'm Alex</div>
+      <div class="my-job">I am a software developer</div>
+      <div class="can-do">
+        I can help you build a product, feature or website look through some of
+        my work and experience! if you like what you see and have a project you
+        needed coded, don't hesitate to contact me.
+      </div>
+      <div class="social-media">
+        <img class="social-icons" src="./img/social.png" alt="" />
+      </div>
+      <div class="sliding">
+        <img class="slide-down" src="./img/slide-down.png" alt="" />
+      </div>
+    </div>
+    <div class="projet-showcase">
+      <div>My Recent Works</div>
+      <div class="project-grid">
+        <div class="flex-project">
+          <div class="thumbnail">
+
+          </div>
+          <div class="project-title">
+
+          </div>
+          <div class="flex-tags">
+
+          </div>
+          <div class="see-project">
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="flex-about-me">
+      <div class="about-me-text">
+        About me
+      </div>
+      <div class="about-me-details">
+        I can help you build a product, feature or website look through some of
+        my work and experience! if you like what you see and have a project you
+        needed coded, don't hesitate to contact me.
+      </div>
+      <div class="my-resume">
+        <button>Get My Resume</button>
+      </div>
+      <div class="grid-info">
+        <div class="flex-info">
+          <div class="top-circle-picture">
+            <img src="" alt="">
+          </div>
+          <div class="topic">
+            Languages
+          </div>
+          <div class="flex-content">
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="footer-flex">
+      <div class="passion-text">
+        I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
+      </div>
+      <div class="form-details">
+        <form action="" class="flex-form">
+          <input type="text" placeholder="Name">
+          <input type="text" name="" id="" placeholder="Last NAme">
+          <input type="email" placeholder="Email address">
+          <textarea name="" id="message" cols="40" rows="5" placeholder="Typing Something"></textarea>
+        </form>
+        </div>
+        <div class="get-in-touch">
+          <button class="button-content">Get in Touch</button>
+        </div>
+      </div>
+      <div class="footer-social-media">
+          <img src="./img/social.png" alt="">
+      </div>
+    
+    
+  </body>
 </html>
